2025-12-25T00:46:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20496358932 # 1386
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-25
* notice: last 14d: unq all: 9 75
* notice: prev accum: outdated-unq outdated-all / unq all: 1305 6172 / 1320 6251
* notice: next accum: outdated-unq outdated-all / unq all: 1308 6176 / 1320 6251
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-10] / []

2025-12-23T12:18:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20460534559 # 1383
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-23
* notice: last 14d: unq all: 11 79
* notice: prev accum: outdated-unq outdated-all / unq all: 1303 6162 / 1320 6251
* notice: next accum: outdated-unq outdated-all / unq all: 1305 6172 / 1320 6251
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-09] / []

2025-12-23T00:46:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20447998378 # 1382
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-23
* notice: last 14d: unq all: 12 89
* notice: prev accum: outdated-unq outdated-all / unq all: 1301 6124 / 1319 6248
* notice: next accum: outdated-unq outdated-all / unq all: 1303 6162 / 1320 6251
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2025-12-08] / [2025-12-22]

2025-12-21T12:16:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20409679641 # 1379