@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-25T00:46:19Z",
-  "count_outdated" : 6176,
-  "uniques_outdated" : 1308,
+  "timestamp" : "2025-12-25T12:18:22Z",
+  "count_outdated" : 6177,
+  "uniques_outdated" : 1309,
   "count" : 6251,
   "uniques" : 1320,
   "views" : [
-    {
-      "timestamp": "2025-12-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-12T00:00:00Z",
       "count": 38,
