@@ -1,12 +1,7 @@
 {
-  "count": 75,
-  "uniques": 9,
+  "count": 74,
+  "uniques": 8,
   "views": [
-    {
-      "timestamp": "2025-12-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-12T00:00:00Z",
       "count": 38,
