@@ -1,3 +1,12 @@
+2025-12-25T12:18:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20504951266 # 1387
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-25
+* notice: last 14d: unq all: 8 74
+* notice: prev accum: outdated-unq outdated-all / unq all: 1308 6176 / 1320 6251
+* notice: next accum: outdated-unq outdated-all / unq all: 1309 6177 / 1320 6251
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-11] / []
+
 2025-12-25T00:46:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20496358932 # 1386
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-25
